@@ -7,7 +7,8 @@ CHANGES
 ------
 
 Added ability to show error bars
-Meta data now saved with project files allows saving plots
+Meta data now saved with project files - allows saving plots
+Add table to plot
 
 ------
 0.5.0
